commit al master del blogplost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title> el titulo del post</title>
+        <title>
+            
+        </title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
