finalizada la cabecera con diseño

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <title> fucking world</title>
         <div id="container">
         <div id="cabecera">
-            cabecera
+            cabecera putamadre
         <h1> aqui vamos a hacer un blog post</h1>
         <p> y este es el parrafo de inicio</p>
     </body>
