agregado el contenido addicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,5 +9,6 @@
     <body>
         <h1> aqui vamos a hacer un blog post</h1>
         <p> y este es el parrafo de inicio</p>
+        <p> la madre de el que lo pario mamaste kulimocho sad sad sad</p>
     </body>
 </html>
