--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,6 @@
             cabecera putamadre
         <h1> aqui vamos a hacer un blog post</h1>
         <p> y este es el parrafo de inicio</p>
-        <p> la madre de el que lo pario mamaste kulimocho sad sad sad</p>
+        <p> la madre de el que lo pario mamaste kulimocho sad sad sad me la mama</p>
     </body>
 </html>
