agregue suscripcion,cambie la cabecera mestra ypuse todo verde

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,10 @@
         <title> fucking world</title>
         <div id="container">
         <div id="cabecera">
-            cabecera putamadre
+            cabecera maestro
         <h1> aqui vamos a hacer un blog post</h1>
         <p> y este es el parrafo de inicio</p>
-        <p> la madre de el que lo pario mamaste kulimocho sad sad sad</p>
+        <p> la madre de el que lo pario mamaste kulimocho sad sad sad padre</p>
+        <p> suscribete y dale like</p>
     </body>
 </html>
